--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,10 @@
+ @import "bootstrap";
+
+    .field_with_errors { @extend .has-error; }
+    .alert-notice { @extend .alert-info; }
+    .alert-alert { @extend .alert-danger; }
+
+
 .menu {
 	text-align: right;
 	padding-right: 50px;
