--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,38 +1,45 @@
-<h2>Register</h2>
+<h2>Sign up</h2>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
+<%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="form-group">
+    <%= f.label :name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+        <%= f.text_field :name, class: "form-control",autofocus: true %>
+    </div>
+</div>
 
-  <div><%= f.label :name %><br />
-        <%= f.text_field :name, autofocus: true %></div>
+<div class="form-group">
+    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+        <%= f.email_field :email, class: "form-control" %>
+    </div>
+</div>
 
- <%= f.radio_button :is_female, '1' %> <%= f.label :is_female, "Female" %>
-  <%= f.radio_button :is_female, '0' %> <%= f.label :is_female, "Male" %>
+<div class="form-group">
+    <%= f.label :password, class: "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+    </div>
+</div>
 
-  <div><%= f.label :date_of_birth %><br />
-        <%= f.date_select :date_of_birth %></div>
+<div class="form-group">
+    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+    <div class="col-sm-6">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+    </div>
+</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-6">
+        <%= f.submit "Sign up", class: "btn btn-primary" %>
+    </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-6">
+        <%= render "users/shared/links" %>
+    </div>
+</div>
 <% end %>
 
-<%= render "users/shared/links" %>
