--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,58 @@
-<h3>This will be a list of posts</h3>
+ <h4>This will be a list of posts</h4>
 
-<ul>
+<!-- <ul>
         <% @posts.each do |p| %>
             <li>
             	<p><%= link_to p.user_id, post_path(p.id) %></p>
                 <h4><%= p.title %></h4>
-                
                 <p><%= p.content %></p>
             </li>
+            <%= link_to 'show', post_path(p) %>
+            
+     	
         <% end %>
+        <p><%= link_to 'new post', new_post_path%></p>
 </ul>
+ -->
+
+<%- model_class = Post -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:content) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= link_to post.id, post_path(post) %></td>
+        <td><%= post.content %></td>
+        <td><%= post.user_id %></td>
+        <td><%= post.title %></td>
+        <td><%=l post.created_at %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.lenks.show")), post_path(post), :class => 'btn btn-default btn-xs'  %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_post_path(post), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      post_path(post),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_post_path,
+            :class => 'btn btn-primary' %>
